# friday

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh  call_variants.py  call_variants_fake.py  generate_images.py  hyperparameter_tuning.py  image_generator.py  main.cpp  main.py  parallele_test.py  post_process_variants.py  predict_fake.py  test.py  train.py  train_friday.py
Dockerfile/: Dockerfile
case_study/: DockerFile.md  precisionFDA.md
modules/: absl.cmake  boost.cmake  htslib.cmake  pybind11.cmake
modules/headers/: pybind_api.h
modules/headers/candidate_finding/: candidate_finder.h
modules/headers/dataio/: bam_handler.h  vcf_handler.h
modules/headers/image_generator/: image_generator.h  summary_generator.h
modules/headers/local_reassembly/: active_region_finder.h  aligner.h  debruijn_boost.h  debruijn_graph.h
modules/python/: ActiveRegionFinder.py  AlignmentSummarizer.py  CandidateFinder.py  CandidateLabler.py  CandidateLablerPositional.py  DataStore.py  DataStore_Prediction.py  DeBruijnHaplotyper.py  ImageGenerator.py  LocalRealignment.py  Options.py  OverlappingVariantSolver.py  PileupGenerator.py  PostProcessVariants.py  TsvHandler.py  VcfWriter.py  dataloader_fake.py  vcf_writer.py
modules/python/helper/: compare_candidates.py  csv_analyzer.py  tensor_analyzer.py
modules/python/models/: ModelHander.py  Seq2Seq_atn.py  data_sampler.py  dataloader.py  dataloader_fake.py  dataloader_predict.py  inception.py  resnet.py  test.py  train.py
modules/src/: pybind_api.cpp
modules/src/candidate_finding/: candidate_finder.cpp
modules/src/dataio/: bam_handler.cpp  fasta_handler.cpp  vcf_handler.cpp
modules/src/image_generator/: image_generator.cpp  summary_generator.cpp
modules/src/local_reassembly/: active_region_finder.cpp  aligner.cpp  debruijn_boost.cpp  debruijn_graph.cpp
